@@ -30,14 +30,15 @@
             <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
             <param name="OWNERLESS_SECTORS" value="$order.$OWNERLESS_SECTORS"/>
             <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-            <param name="IDLE_TIME"     value="$order.$IDLE_TIME"/>
-            <param name="IDLE_MOVE_TO"  value="$order.$IDLE_MOVE_TO"/>
-            <param name="WHERE_TO_MOVE" value="$order.$WHERE_TO_MOVE"/>
-            <param name="IDLE_FOLLOW"   value="$order.$IDLE_FOLLOW"/>
-            <param name="WHO_TO_FOLLOW" value="$order.$WHO_TO_FOLLOW"/>
-            <param name="IDLE_DOCKING"  value="$order.$IDLE_DOCKING"/>
-            <param name="FIND_STATION"  value="$order.$FIND_STATION"/>
-            <param name="WHERE_TO_DOCK" value="$order.$WHERE_TO_DOCK"/>
+            <param name="IDLE_TIME"      value="$order.$IDLE_TIME"/>
+            <param name="IDLE_MOVE_TO"   value="$order.$IDLE_MOVE_TO"/>
+            <param name="WHERE_TO_MOVE"  value="$order.$WHERE_TO_MOVE"/>
+            <param name="START_POSITION" value="[this.ship.sector, this.ship.position]"/>
+            <param name="IDLE_FOLLOW"    value="$order.$IDLE_FOLLOW"/>
+            <param name="WHO_TO_FOLLOW"  value="$order.$WHO_TO_FOLLOW"/>
+            <param name="IDLE_DOCKING"   value="$order.$IDLE_DOCKING"/>
+            <param name="FIND_STATION"   value="$order.$FIND_STATION"/>
+            <param name="WHERE_TO_DOCK"  value="$order.$WHERE_TO_DOCK"/>
             <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
             <param name="SHOW_MESSAGES" value="$order.$SHOW_MESSAGES"/>
             <param name="WRITE_TO_LOG"  value="$order.$WRITE_TO_LOG"/>
